<resources>
    <string name="app_name">experiment</string>
    <string name="map_fragment_title">Map</string>
    <string name="notes_fragment_title">All notes</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="note_picture_iv_cd">Note picture</string>
    <string name="notes_list_loading_error_text">Error</string>
    <string name="delete_title">Delete</string>
    <string name="deleting_error_text">Deleting error</string>
    <string name="deleting">Deleting</string>
    <string name="deleting_success">Deletion completed</string>
    <string name="plus">+</string>
    <string name="add_a_note_button_cd">Add a note button</string>
    <string name="add_a_photo_btn_text">Add a photo</string>
    <string name="note_title_et_hint">Enter the note title…</string>
    <string name="note_title_input_layout_hint">Title</string>
    <string name="note_description_input_layout_hint">Description</string>
    <string name="proceed_adding_a_note_button_cd">Proceed adding a note button</string>
    <string name="note_image_iv_content_desc">Note image Image view</string>
    <string name="edit_button_cd">Edit note button</string>
    <string name="added_note_picture_iv_cd">Added note picture image view</string>
    <string name="remove_photo_button_text">Remove the photo</string>
    <string name="note_title_et_error_text">Enter the title</string>
    <string name="note_description_et_error_text">Enter the content</string>
    <string name="ru_date_time_format">dd MMMM yyyy, HH:mm</string>
    <string name="update_date_tv_text">Lastly updated at: %1$s</string>
    <string name="creation_date_tv_text">Created at: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_error_text">Login error</string>
    <string name="wrong_user_credentials_text">Wrong user credentials, try again</string>
    <string name="profile_tv">Your profile</string>
    <string name="log_out_btn_text">Log out</string>
    <string name="profile_info_loading_error_text">Profile info loading error</string>
    <string name="action_register">Register</string>
    <string name="action_get_back_to_login">Get back to log in</string>
    <string name="action_get_to_account_register">I don\'t have an account</string>
    <string name="unsuccessful_registration">Unsuccessful registration</string>
    <string name="prompt_displayName">Username</string>
    <string name="empty_password_error_text">Enter password</string>
    <string name="invalid_password_error_text">Password must be longer than 6 symbols</string>
    <string name="empty_username_error_text">Enter the username</string>
    <string name="invalid_username_error_text">Invalid username</string>
    <string name="empty_email_error_text">Enter the email</string>
    <string name="invalid_email_error_text">Invalid email</string>
    <string name="map_fragment_text">MAP FRAGMENT</string>
    <string name="registration_error_text">Registration error</string>
    <string name="email_is_used_error">This email is already registered</string>
</resources>