<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.NoteAddingFragment"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_a_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_photo_btn_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:icon="@drawable/icon_outline_add_a_photo_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/remove_photo_button_text"
        android:visibility="gone"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/icon_baseline_delete_basket_red_outline_24"
        app:layout_constraintStart_toEndOf="@id/add_a_photo_btn"
        app:layout_constraintTop_toTopOf="@id/add_a_photo_btn"
        />

    <ImageView
        android:id="@+id/added_note_picture_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/added_note_picture_iv_cd"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_a_photo_btn"
        tools:src="@drawable/icon_notes_fragment"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_title_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_input_layout_hint"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/added_note_picture_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_description_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description_input_layout_hint"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/note_title_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/proceed_adding_a_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/proceed_adding_a_note_button_cd"
        android:src="@drawable/icon_check_galochka_24"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>